# DataInvestor

./: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
datainvestor/: settings.py
datainvestor/alpha_model/: alpha_model.py  fixed_signals.py  single_signal.py
datainvestor/asset/: asset.py  cash.py  equity.py
datainvestor/asset/universe/: dynamic.py  static.py
datainvestor/broker/: broker.py  simulated_broker.py
datainvestor/broker/fee_model/: fee_model.py  percent_fee_model.py  zero_fee_model.py
datainvestor/data/: backtest_data_handler.py  daily_bar_csv.py
datainvestor/exchange/: exchange.py  simulated_exchange.py
datainvestor/execution/: execution_handler.py  order.py
datainvestor/portcon/: pcm.py
datainvestor/risk_model/: risk_model.py
datainvestor/signals/: buffer.py  momentum.py  signal.py  signals_collection.py  sma.py  vol.py
datainvestor/simulation/: daily_bday.py  event.py  sim_engine.py
datainvestor/statistics/: json_statistics.py  performance.py  statistics.py  tearsheet.py
datainvestor/system/: qts.py
datainvestor/trading/: backtest.py  trading_session.py
datainvestor/utils/: console.py
dockerfiles/: Dockerfile
examples/: buy_and_hold.py  long_short.py  momentum_taa.py  sixty_forty.py  sixty_forty_fees.py
examples/data/: AGG.csv  SPY.csv  XLB.csv  XLC.csv  XLE.csv  XLF.csv  XLI.csv  XLK.csv  XLP.csv  XLU.csv  XLV.csv  XLY.csv  download.py
requirements/: base.txt
scripts/: config.yml  static_backtest.py
scripts/data/: AGG.csv  GLD.csv  GSG.csv  IEI.csv  SPY.csv  TLT.csv  VTI.csv
tests/: conftest.py
(+46 files in other folders)
